--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,15 +41,16 @@ layout: default
 
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
-    <div id="table-of-contents">
-      {% toc %}
-    </div>
-    <hr>
+      <div id="table-of-contents">
+        <!-- Replace {% toc %} with the code to generate the table of contents -->
+      </div>
+      <hr>
     {% endif %}
     <div id="markdown-content">
       {{ content }}
     </div>
   </article>
+  
 
   {%- if site.related_blog_posts.enabled -%}
     {%- if page.related_posts == null or page.related_posts -%}
